--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-   <li>
-    <h1>Bu git loyihasi</h1>
-   </li> 
-   <footer>
-    bu <footer></footer>
-   </footer>
+    <div>
+        <h1>Salom</h1>
+        Bu git
+    </div>
+    <footer>
+        bu <footer></footer>
+    </footer>
 </body>
 </html>
