v4 on branch blog

--- a/blog.html
+++ b/blog.html
@@ -6,15 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <h1>Salom</h1>
-        Bu git
-    </div>
-    <div>
-        on branch blog
-    </div>
-    <footer>
-        bu footer
-    </footer>
+    Bu blog html
 </body>
 </html>
